--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -14,11 +14,13 @@
     "import/resolver": {
       "node": {
         "extensions": [".ts", ".js", ".json"]
-      }
+      },
+      "typescript": {}
     },
     "import/extensions": [".js", ".ts"]
   },
   "rules": {
+    "no-undef": "off",
     "no-shadow": "off",
     "import/prefer-default-export": "off",
     "no-console": "off",
