--- a/backend/package.json
+++ b/backend/package.json
@@ -17,18 +17,26 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/csurf": "^1.11.5",
     "@types/express": "^4.17.21",
+    "@types/express-mongo-sanitize": "^1.3.2",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/helmet": "^0.0.48",
     "@types/md5": "^2.3.5",
     "@types/ms": "^0.7.34",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.7",
+    "@types/sanitize-filename": "^1.1.28",
+    "@types/sanitize-html": "^2.16.0",
     "@types/unique-slug": "^4.0.0",
+    "@types/uuid": "^10.0.0",
     "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.29.1",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
@@ -42,16 +50,23 @@
     "celebrate": "^15.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mime-types": "^2.1.35",
-    "mongoose": "^8.3.2",
+    "mongoose": "^7.8.7",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "sanitize-filename": "^1.6.3",
+    "sanitize-html": "^2.17.0",
     "sharp": "^0.33.4",
     "unique-slug": "^4.0.0",
+    "uuid": "^13.0.0",
     "validator": "^13.12.0"
   }
 }
