--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/csurf": "^1.11.5",
@@ -22,6 +23,7 @@
     "@types/express-mongo-sanitize": "^1.3.2",
     "@types/express-rate-limit": "^5.1.3",
     "@types/helmet": "^0.0.48",
+    "@types/hpp": "^0.2.6",
     "@types/md5": "^2.3.5",
     "@types/ms": "^0.7.34",
     "@types/multer": "^1.4.11",
@@ -48,6 +50,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
@@ -55,7 +58,9 @@
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.1.0",
+    "express-slow-down": "^3.0.0",
     "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mime-types": "^2.1.35",
