--- a/backend/package.json
+++ b/backend/package.json
@@ -73,5 +73,8 @@
     "unique-slug": "^4.0.0",
     "uuid": "^13.0.0",
     "validator": "^13.12.0"
+  },
+  "overrides": {
+    "cookie": "0.7.2"
   }
 }
